# TuyaOpen

apps/tuya.ai/your_chat_bot/config/: ATK-DNESP32S3.config  DNESP32S3.config
boards/ESP32/: Kconfig
boards/ESP32/ATK-DNESP32S3/: Kconfig  atk-dnesp32.c  board_config.h
boards/ESP32/DNESP32S3/: CMakeLists.txt  board_config.h  dnesp32.c
boards/ESP32/common/: CMakeLists.txt
boards/ESP32/common/audio/: tdd_audio_codec_bus.c  tdd_audio_es8388_codec.c  tdd_audio_es8388_codec.h  tdd_xl9555_io.c  tdd_xl9555_io.h
boards/ESP32/common/display/: app_display.c  tuya_lvgl.c
boards/ESP32/common/lcd/: lcd_st7789.c
docs/en/: conf.py  index.rst  quick_start.rst
docs/en/flashing/: CLI-flash.rst
docs/zh/: conf.py  index.rst  quick_start.rst
docs/zh/flashing/: CLI-flash.rst
